# anonyufront

./: .gitignore  Cargo.toml  README.md
cpp/UFront2TOSA/: .gitignore  .gitmodules  CMakeLists.txt  README.md
cpp/UFront2TOSA/images/: build.dockerfile  dev.dockerfile
cpp/UFront2TOSA/include/CAPI/: TosaConverter.h
cpp/UFront2TOSA/include/Conversion/: CMakeLists.txt  Passes.hpp  Passes.td
cpp/UFront2TOSA/include/Conversion/TestElidedToConst/: TestElidedToConst.hpp
cpp/UFront2TOSA/include/Conversion/UfrontToTosa/: UfrontToTosa.hpp
cpp/UFront2TOSA/include/Dialect/: CMakeLists.txt
cpp/UFront2TOSA/include/Dialect/Ufront/IR/: CMakeLists.txt  Ufront.hpp  Ufront.td
cpp/UFront2TOSA/lib/CAPI/: CMakeLists.txt  TosaConverter.cpp
cpp/UFront2TOSA/lib/Conversion/: CMakeLists.txt  Passes.cpp
cpp/UFront2TOSA/lib/Conversion/TestElidedToConst/: CMakeLists.txt  InitWeight.cpp  InitWeight.hpp  Random.cpp  Random.hpp  TestElidedToConst.cpp
cpp/UFront2TOSA/lib/Conversion/UfrontToTosa/: CMakeLists.txt  Patterns.cpp  Patterns.hpp  UfrontToTosa.cpp  UfrontToTosa.hpp  Util.cpp  Util.hpp
cpp/UFront2TOSA/lib/Conversion/UfrontToTosa/Patterns/: ActivationPatterns.cpp  BinaryPatterns.cpp  BinaryScalarPatterns.cpp  Cast.cpp  Embedding.cpp  MultiheadAttention.cpp  MultiheadAttention.hpp  MultiheadAttentionPattern.cpp  NormPatterns.cpp  Parameter.cpp  npy.hpp
cpp/UFront2TOSA/lib/Dialect/Ufront/IR/: CMakeLists.txt  Ufront.cpp
cpp/UFront2TOSA/test/: capi.py
cpp/UFront2TOSA/tools/: CMakeLists.txt
cpp/UFront2TOSA/tools/ufront-opt/: CMakeLists.txt  ufront-opt.cpp
examples/: bert_test.py  compilation_test.ipynb  compilation_tf_test.ipynb  imagenet_inference.ipynb  keras_test.py  test_accuracy.ipynb  test_tf.ipynb  test_tf_A100.ipynb  test_torch.ipynb  torch_bert.py  torch_e2e_demo.py  ufront-test.ipynb
examples/bert/: attention.py
examples/output_ir/: native_ComplexCNN.ir  torch_RegNet.ir  torch_ResNet.ir
python/ufront/: utils.py
python/ufront/keras/: model.py
python/ufront/onnx/: model.py
python/ufront/pytorch/: model.py
rawapi/: Cargo.toml
src/: databuffer.rs  graph.rs  initializer.rs  lib.rs  model.rs  operator.rs  optimizer.rs  tensor.rs  types.rs
